# CamWorker

./: .gitignore  CMakeLists.txt  CamWorker.h  CamWorker.sln  CamWorker.vcxproj  CamWorker.vcxproj.filters  Common.h  Frame.h  FrameDispatcher.cpp  FrameQueue.cpp  FrameQueue.h  README.md  main.cpp
FrameProcessors/: FrameProcessor.h  WorkerTwoFrameProcessor.cpp  WorkerTwoFrameProcessor.h
src/: CamWorker.cpp  CamWorker.h  CircularQueue.h  Common.h  Frame.h  FrameDispatcher.cpp  FrameDispatcher.h  FrameQueue.cpp  FrameQueue.h  main.cpp
src/FrameProcessors/: FrameProcessor.cpp  FrameProcessor.h  WorkerOneFrameProcessor.cpp  WorkerOneFrameProcessor.h  WorkerTwoFrameProcessor.cpp  WorkerTwoFrameProcessor.h
